# storeApI

./: .env  LICENSE  README.md  main.py  requirements.txt  users.py
api/: dependencies.py  main.py
api/auth/: login.py
api/routers/: items.py  users.py
api/static/: static_files.py
app/: main.py
app/api/routes/auth/: login.py
app/api/schemas/: token.py
app/api/services/: item_services.py
app/auth/: login.py
app/core/: dependencies.py  security.py
app/dependencies/: auth.py  common_query.py  db.py
app/middleware/: middleware.py
app/routers/: items.py  users.py
app/routers/auth/: login.py
app/routes/: items.py  users.py
app/schemas/: items.py  users.py
app/services/: auth_services.py  user_service.py  user_services.py
app/utilities/: exceptions.py
backend/: .env.example  .gitignore  README.md  alembic.ini  log.txt  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 18049847613e_initialize_models.py
backend/app/: database.db  log.txt  main.py  requirements.dev.txt  requirements.txt
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4600612f87bb_initialize_models.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  heroes.py  items.py  login.py  notifications.py  tasks.py  users.py
backend/app/api/routes/auth/: login.py  register.py
backend/app/api/schemas/: heroes.py  items.py  token.py  users.py
backend/app/api/services/: auth_services.py  user_services.py
backend/app/core/: config.py  db.py  deps.py  logging_config.py  security.py
backend/app/database/: crud.py  db.py
backend/app/external_services/: notifications.py
backend/app/models/:  item_models.py  __init__.py  auth_models.py  email_models.py  generic_models.py  item_models.py  items.py  schemas.py  token.py  user_models.py  users.py
backend/app/schemas/: items.py  users.py
backend/app/services/: email_services.py  item_services.py  password_services.py  user_services.py
backend/app/static/: files.py  static_files.py
backend/app/templates/: item.html  new_account.mjml  reset_password.mjml  test_email.mjml
backend/app/templates/email/: new_account.mjml  reset_password.mjml
backend/app/tests/: conftest.py  helpers.py  test_items.py  test_main.py
backend/app/tests/api/routes/: test_auth.py  test_email.py  test_items.py  test_tasks.py  test_users.py
backend/app/tests/core/: test_security.py
backend/app/tests/integration/: test_user_workflow.py
backend/app/tests/services/: test_email_services.py  test_item_services.py  test_password_services.py  test_user_services.py  test_users.py
backend/app/utilities/: constants.py  exceptions.py  password_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 39a249d5ec5c_initial_migration.py  b35c2fef2d4f_create_initial_tables.py
tests/: test_users.py
