[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_project"
version = "0.1.0"
description = "A FastAPI project"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
license = "MIT"
readme = "README.md"
keywords = ["fastapi", "python", "web", "api"]
dependencies = [
    "fastapi[standard]<1.0.0,>=0.115.6",
    "uvicorn[standard]<1.0.0,>=0.34.0",
    "pydantic>2.9.2",
    "python-multipart<1.0.0,>=0.0.17",
    "PyJWT<3.0.0,>=2.10.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "bcrypt==4.2.1",
    "sqlmodel==0.0.22",
    "pydantic-settings<3.0.0,>=2.7.1",
    "Jinja2<4.0.0,>=3.1.5",
    "python-dotenv<2.0.0,>=1.0.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "httpx<1.0.0,>=0.28.1",
    "pytest<9.0.0,>=8.3.4",
    "pytest-asyncio<1.0.0,>=0.25.2",
    "trio-parallel<2.0.0,>=1.3.0"
]

[tool.ruff.lint]
extend-select = ["UP", "D"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/your_username/my_project"
"Bug Tracker" = "https://github.com/your_username/my_project/issues"
Changelog = "https://github.com/your_username/my_project/blob/main/CHANGELOG.md"

[project.scripts]
my_project-cli = "my_project.cli:main"
